added new project on portfolio

--- a/index.html
+++ b/index.html
@@ -218,6 +218,21 @@
           <img src="images/portitem4.jpg" alt="">
         </div>
       </div>
+      <div class="portfolio-item">
+        <div class="portfolio-img has-margin-right" data-aos="fade-right" data-aos-delay="1800">
+          <img src="images/sami-vs-the-ghosts.png" alt="">
+        </div>
+        <div class="portfolio-description" data-aos="fade-left" data-aos-delay="200">
+          <h6>Game Development</h6>
+          <h1>Sami vs The Ghosts</h1>
+          <p>
+            Inspired by Kids Coding Playground, I made this game in memory of my pet labrador Nanah.<br>
+            Help Sami save his owner from the scary ghosts of Night City! Sami can spit doggo beams to fight the ghosts!<br>
+            Press up arrow to move up, down arrow to move down, and spacebar to spit doggo beams.
+          </p>
+          <a href="https://scratch.mit.edu/projects/454709221/fullscreen/" target="_blank" class="cta">Play Game</a>
+        </div>
+      </div>
     </div>
   </section>
 
