edited description of new project on the portfolio section

--- a/index.html
+++ b/index.html
@@ -228,8 +228,9 @@
           <p>
             Inspired by Kids Coding Playground, I made this game in memory of my pet labrador Nanah.<br><br>
             Built using the Scratch Game Engine, help Sami save his owner from the scary ghosts of Night City!
-            Sami can spit doggo beams to fight the ghosts! Press up arrow to move up, down arrow to move down,
-            and spacebar to spit doggo beams.
+            Sami can spit doggo beams to fight the ghosts! <br><br> Press the <strong>up arrow</strong>key to            
+            move Sami up, <strong>down arrow</strong> to move down, and <strong>spacebar</strong> to spit doggo
+            beams.
           </p>
           <a href="https://scratch.mit.edu/projects/454709221/fullscreen/" target="_blank" class="cta">Play Game</a>
         </div>
