--- a/index.html
+++ b/index.html
@@ -228,8 +228,8 @@
           <p>
             Inspired by Kids Coding Playground, I made this game in memory of my pet labrador Nanah.<br><br>
             Built using the Scratch Game Engine, help Sami save his owner from the scary ghosts of Night City!
-            Sami can spit doggo beams to fight the ghosts! <br><br> Press the <strong>up arrow</strong>key to            
-            move Sami up, <strong>down arrow</strong> to move down, and <strong>spacebar</strong> to spit doggo
+            Sami can spit doggo beams to fight the ghosts! <br><br> Press the <u>up arrow</u> key to            
+            move Sami up, <u>down arrow</u> to move down, and <u>spacebar</u> to spit doggo
             beams.
           </p>
           <a href="https://scratch.mit.edu/projects/454709221/fullscreen/" target="_blank" class="cta">Play Game</a>
