edit description of new project

--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
           <h1>Sami vs The Ghosts</h1>
           <p>
             Inspired by Kids Coding Playground, I made this game in memory of my pet labrador Nanah.<br><br>
-            Built using the Scratch Game Engine, help Sami save his owner from the scary ghosts of Night City!
+            Built using Scratch Game Engine, help Sami save his owner from the scary ghosts of Night City!
             Sami can spit doggo beams to fight the ghosts! <br><br> Press the <u>up arrow</u> key to            
             move Sami up, <u>down arrow</u> to move down, and <u>spacebar</u> to spit doggo
             beams.
