added new project

--- a/index.html
+++ b/index.html
@@ -235,6 +235,21 @@
           <a href="https://scratch.mit.edu/projects/454709221/fullscreen/" target="_blank" class="cta">Play Game</a>
         </div>
       </div>
+      <div class="portfolio-item">
+        <div class="portfolio-description has-margin-right" data-aos="fade-right" data-aos-delay="2200">
+          <h6>Web Design</h6>
+          <h1>Restaurant Menu Page</h1>
+          <p>
+            Built using Javascript, HTML, and CSS, I designed and made this webpage for a restaurant 
+            which shows a full menu set, which you can then sort by breakfast, lunch, shakes, and dinner.
+            Finally, you can choose one meal or choose multiple orders and then complete the purchase.            
+          </p>
+          <a href="https://condescending-easley-621bfe.netlify.app/" target="_blank" class="cta">See More</a>
+        </div>
+        <div class="portfolio-img" data-aos="fade-left" data-aos-delay="2400">
+          <img src="images/portitem2.jpg" alt="">
+        </div>
+      </div>
     </div>
   </section>
 
