added new project description and images

--- a/index.html
+++ b/index.html
@@ -173,17 +173,16 @@
       </div>
       <div class="portfolio-item">
         <div class="portfolio-description has-margin-right" data-aos="fade-right" data-aos-delay="600">
-          <h6>Web Design</h6>
-          <h1>Restaurant Menu Page</h1>
+          <h6>Software Development</h6>
+          <h1>My React Quiz</h1>
           <p>
-            Built using Javascript, HTML, and CSS, I designed and made this webpage for a restaurant 
-            which shows a full menu set, which you can then sort by breakfast, lunch, shakes, and dinner.
-            Finally, you can choose one meal or choose multiple orders and then complete the purchase.            
+            Built using Typescript and React.js, test your knowledge by playing this quiz game!
+            This app runs a series of 10 questions at a time; topics are randomly selected.
           </p>
-          <a href="https://condescending-easley-621bfe.netlify.app/" target="_blank" class="cta">See More</a>
+          <a href="https://serene-bartik-955534.netlify.app/" target="_blank" class="cta">Start Quiz</a>
         </div>
         <div class="portfolio-img" data-aos="fade-left" data-aos-delay="800">
-          <img src="images/portitem2.jpg" alt="">
+          <img src="images/my-react-quiz.jpg" alt="">
         </div>
       </div>
       <div class="portfolio-item">
