edited about myself description

--- a/index.html
+++ b/index.html
@@ -69,9 +69,11 @@
           As a former nurse, I am efficient in working within a team and in high
           pressure work situations. As a former nurse manager, I am capable of
           managing a team myself. <br><br>
-          <u>Skills</u>: Ruby on Rails, Ruby, SQL, Javascript, HTML, CSS, and Bootstrap <br>
-          <u>Currently Learning</u>: React.js, Framework & Algorithms, and Python <br>
-          <u>Other Skills</u>: Facebook Ads, Photoshop, Lightroom, GitHub, Figma, and Heroku
+          <u>Skills</u>: Ruby on Rails, Ruby, SQL, Javascript, HTML, CSS, Bootstrap, <br>
+          React.js, node.js, MongoDB, RESTful API, Typescript, C#, .NET, Android Studio, <br>
+          Flutter, Dart, and Kotlin. 
+          <u>Other Skills</u>: Landscape photography, Facebook Ads, Photoshop, Lightroom, <br>
+          GitHub, Figma, and Heroku.
         </p>
         <div class="social-media">
           <div class="nav-list">
