--- a/index.html
+++ b/index.html
@@ -69,10 +69,9 @@
           As a former nurse, I am efficient in working within a team and in high
           pressure work situations. As a former nurse manager, I am capable of
           managing a team myself. <br><br>
-          <u>Skills</u>: Ruby on Rails, Ruby, SQL, Javascript, HTML, CSS, Bootstrap, <br>
-          React.js, node.js, MongoDB, RESTful API, Typescript, C#, .NET, Android Studio, <br>
-          Flutter, Dart, and Kotlin. 
-          <u>Other Skills</u>: Landscape photography, Facebook Ads, Photoshop, Lightroom, <br>
+          <u>Skills</u>: Ruby on Rails, Ruby, SQL, Javascript, HTML, CSS, Bootstrap,
+          React.js, node.js, Typescript, Android Studio, Flutter, Dart, and Kotlin. <br>
+          <u>Other Skills</u>: Landscape photography, Facebook Ads, Photoshop, Lightroom,
           GitHub, Figma, and Heroku.
         </p>
         <div class="social-media">
