edited about myself description

--- a/index.html
+++ b/index.html
@@ -71,7 +71,8 @@
           managing a team myself. <br><br>
           <u>Skills</u>: Ruby on Rails, Ruby, SQL, Javascript, HTML, CSS, Bootstrap,
           React.js, node.js, Typescript, Android Studio, Flutter, Dart, and Kotlin. <br>
-          <u>Other Skills</u>: Landscape photography, Facebook Ads, Photoshop, Lightroom,
+          <u>Currently Learning</u>: C#, .NET, MongoDB, and RESTful API. <br>
+          <u>Other Skills</u>: Landscape photography, Facebook ads, Photoshop, Lightroom,
           GitHub, Figma, and Heroku.
         </p>
         <div class="social-media">
