edited about myself description

--- a/index.html
+++ b/index.html
@@ -70,10 +70,10 @@
           pressure work situations. As a former nurse manager, I am capable of
           managing a team myself. <br><br>
           <u>Skills</u>: Ruby on Rails, Ruby, SQL, Javascript, HTML, CSS, Bootstrap,
-          React.js, node.js, Typescript, Android Studio, Flutter, Dart, and Kotlin. <br>
-          <u>Currently Learning</u>: C#, .NET, MongoDB, and RESTful API. <br>
+          React.js, node.js, Typescript, Android Studio, Flutter, Dart, and Kotlin <br><br>
+          <u>Currently Learning</u>: C#, .NET, MongoDB, and RESTful API <br><br>
           <u>Other Skills</u>: Landscape photography, Facebook ads, Photoshop, Lightroom,
-          GitHub, Figma, and Heroku.
+          GitHub, Figma, and Heroku
         </p>
         <div class="social-media">
           <div class="nav-list">
