--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
           As a former nurse, I am efficient in working within a team and in high
           pressure work situations. As a former nurse manager, I am capable of
           managing a team myself. <br><br>
+          <u>Qualification</u>: Graduate Diploma of Technology (Software Engineering) <br><br>
           <u>Skills</u>: Ruby on Rails, Ruby, SQL, Javascript, HTML, CSS, Bootstrap,
           React.js, node.js, Typescript, Android Studio, Flutter, Dart, and Kotlin <br><br>
           <u>Currently Learning</u>: C#, .NET, MongoDB, and RESTful API <br><br>
@@ -270,7 +271,7 @@
           <li class="date" data-date="2020 - 2021">
             <h1>Aussie Digital Business Systems</h1>
             <p>
-              Dec 2020 - PRESENT<br>
+              Dec 2020 - Mar 2021<br>
               Frontend Engineer
             </p>
           </li>
