--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
   <section class="about" id="about">
     <div class="container">
       <div class="profile-img" data-aos="fade-right" data-aos-delay="300">
-        <img src="images/profile.jpg" alt="Lodi">
+        <!--  <img src="images/profile.jpg" alt="Lodi"> -->
         <form target="_blank" action="cv-lodipalle.pdf" class="download-cv">
           <input type="submit" value="Download CV" />
         </form>
