--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
               Frontend Engineer Intern
             </p>
           </li>
-          <li class="date" data-date="2016 - 2020">
+    <!--  <li class="date" data-date="2016 - 2020">
             <h1>Australian Unity</h1>
             <p>
               Feb 2016 - May 2020<br>
@@ -316,20 +316,20 @@
                 Care Manager (Grade 5 RN)
               </p>
             </li>
-            <li class="date" data-date="2017 - 2018">
+        <li class="date" data-date="2017 - 2018">
               <h1>ArCare</h1>
               <p>
                 Aug 2017 - May 2018<br>
                 PM/ND RN Incharge (Grade 5 RN)
               </p>
             </li>
-            <li class="date" data-date="2016 - 2017">
+            <li class="date" data-date="2016 - 2017">  
               <h1>CaSPACare</h1>
               <p>
                 Feb 2016 - Feb 2017<br>
                 Grade 3 RN
               </p>
-            </li>
+            </li> -->
           </li>
         </ul>
       </div>
