--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
           As a software engineer, my real passion is on web and UX design.
           Creating software appeals to my artistic, creativite, and innovative
           side, hence I am always looking to grow and improve as a developer. <br><br>
-          As a former nurse, I am efficient in working within a team and in high
+          As a former healthcare professional, I am efficient in working within a team and in high
           pressure work situations. As a former nurse manager, I am capable of
           managing a team myself. <br><br>
           <u>Qualification</u>: Graduate Diploma of Technology (Software Engineering) <br><br>
