--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
           Creating software appeals to my artistic, creativite, and innovative
           side, hence I am always looking to grow and improve as a developer. <br><br>
           As a former healthcare professional, I am efficient in working within a team and in high
-          pressure work situations. As a former nurse manager, I am capable of
+          pressure work situations. As a former manager, I am capable of
           managing a team myself. <br><br>
           <u>Qualification</u>: Graduate Diploma of Technology (Software Engineering) <br><br>
           <u>Skills</u>: Ruby on Rails, Ruby, SQL, Javascript, HTML, CSS, Bootstrap,
