added back work experience

--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@
   <section class="about" id="about">
     <div class="container">
       <div class="profile-img" data-aos="fade-right" data-aos-delay="300">
-        <!--  <img src="images/profile.jpg" alt="Lodi"> -->
+        <img src="images/profile.jpg" alt="Lodi">
         <form target="_blank" action="cv-lodipalle.pdf" class="download-cv">
-          <!-- <input type="submit" value="Download CV" /> -->
+        <input type="submit" value="Download CV" />
         </form>
       </div>
       <div class="about-details" data-aos="fade-left" data-aos-delay="600">
@@ -282,7 +282,7 @@
               Frontend Engineer Intern
             </p>
           </li>
-  <!--   <li class="date" data-date="2016 - 2020">
+          <li class="date" data-date="2016 - 2020">
             <h1>Australian Unity</h1>
             <p>
               Feb 2016 - May 2020<br>
@@ -329,7 +329,7 @@
                 Feb 2016 - Feb 2017<br>
                 Grade 3 RN
               </p>
-            </li>   -->
+            </li>
           </li>
         </ul>
       </div>
