--- a/index.html
+++ b/index.html
@@ -61,14 +61,14 @@
           <h6>Myself</h6>
         </div>
         <p>
-          My vision is to build huge and exciting software that is
-          both essential to the world and commercially successful.
-          As a software engineer, my real passion is on web and UX design.
-          Creating software appeals to my artistic, creativite, and innovative
-          side, hence I am always looking to grow and improve as a developer. <br><br>
-          As a former healthcare professional, I am efficient in working within a team and in high
-          pressure work situations. As a former manager, I am capable of
-          managing a team myself. <br><br>
+          I am a junior software engineer transitioning to the
+          cybersecurity field. I discovered my passion for networking
+          and security during my formative years completing my
+          graduate diploma in software engineering. My goal is to
+          become a competent penetration tester in the future. <br><br>
+          As a former healthcare professional, I am efficient in working
+          within a team and in high pressure work situations. As a
+          former manager, I am capable of managing a team myself. <br><br>
           <u>Qualification</u>: Graduate Diploma of Technology (Software Engineering) <br><br>
           <u>Skills</u>: Ruby on Rails, Ruby, SQL, Javascript, HTML, CSS, Bootstrap,
           React.js, node.js, Typescript, Android Studio, Flutter, Dart, and Kotlin <br><br>
