--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     </nav>
     <div class="landing-text">
       <h1>Lodi Palle</h1>
-      <h6>Aspiring Cybersecurity Specialist | Junior Software Engineer | Landscape Photographer</h6><br>
+      <h6>Aspiring Cybersecurity Specialist | Junior Software Engineer</h6><br>
     </div>
   </header>
 
