new languages added

--- a/index.html
+++ b/index.html
@@ -71,7 +71,8 @@
           former manager, I am capable of managing a team myself. <br><br>
           <u>Qualification</u>: Graduate Diploma of Technology (Software Engineering) <br><br>
           <u>Skills</u>: Ruby on Rails, Ruby, SQL, Javascript, HTML, CSS, Bootstrap,
-          React.js, node.js, Typescript, Android Studio, Flutter, Dart, and Kotlin <br><br>
+          React.js, node.js, Typescript, Android Studio, Flutter, Dart, Kotlin, ERP Systems,
+          SAP, Tableau, Microsoft Power BI <br><br>
           <u>Currently Learning</u>: C#, .NET, MongoDB, and RESTful API <br><br>
           <u>Other Skills</u>: Landscape photography, Facebook ads, Photoshop, Lightroom,
           GitHub, Figma, and Heroku
