--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
           graduate diploma in software engineering. My goal is to
           become a competent penetration tester in the future. <br><br>
           As a former healthcare professional, I am efficient in working
-          within a team and in high pressure work situations. As a
-          former manager, I am capable of managing a team myself. <br><br>
+          within a team and in high-pressure work situations. As a
+          former manager, I can manage a team efficiently and effectively. <br><br>
           <u>Qualification</u>: Graduate Diploma of Technology (Software Engineering) <br><br>
           <u>Skills</u>: Ruby on Rails, Ruby, SQL, Javascript, HTML, CSS, Bootstrap,
           React.js, node.js, Typescript, Android Studio, Flutter, Dart, Kotlin, ERP Systems,
