--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
           <a href="#skills" class="nav-link">Skills</a>
         </li>
         <li>
+          <a href="#itcerts" class="nav-link">IT Certifications</a>
+        </li>
+        <li>
           <a href="#portfolio" class="nav-link">Portfolio</a>
         </li>
         <li>
@@ -148,6 +151,15 @@
 
   <!-- End of Skills -->
 
+  <!-- Start of IT Certifications -->
+
+  <section class="itcerts" id="itcets">
+    <div>
+      <h1>IT Certifications</h1>
+    </div>
+  </section>
+
+  <!-- End of IT Certifications -->
 
   <!-- Start of Portfolio -->
 
