adding it certs

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     </nav>
     <div class="landing-text">
       <h1>Lodi Palle</h1>
-      <h6>Aspiring Cybersecurity Specialist | Junior Software Engineer</h6><br>
+      <h6>Cybersecurity Professional | Junior Software Engineer</h6><br>
     </div>
   </header>
 
@@ -154,8 +154,10 @@
   <!-- Start of IT Certifications -->
 
   <section class="itcerts" id="itcets">
-    <div>
-      <h1>IT Certifications</h1>
+    <div class="container">
+      <div class="section-heading">
+        <h1>IT Certifications</h1>
+      </div>
     </div>
   </section>
 
