--- a/index.html
+++ b/index.html
@@ -157,6 +157,10 @@
     <div class="container">
       <div class="section-heading">
         <h1>IT Certifications</h1>
+        <h6>Professional IT certifications I Passed</h6>
+      </div>
+      <div class="itcerts-item">
+
       </div>
     </div>
   </section>
