--- a/index.html
+++ b/index.html
@@ -157,9 +157,9 @@
     <div class="container">
       <div class="section-heading">
         <h1>IT Certifications</h1>
-        <h6>Professional IT certifications I Passed</h6>
+        <h6>IT certificates I Passed</h6>
       </div>
-      <div class="itcerts-item">
+      <div class="itcerts-item" data-aos="fade-left" data-aos-delay="400">
 
       </div>
     </div>
