--- a/index.html
+++ b/index.html
@@ -159,8 +159,11 @@
         <h1>IT Certifications</h1>
         <h6>IT certificates I Passed</h6>
       </div>
-      <div class="itcerts-item" data-aos="fade-left" data-aos-delay="400">
-
+      <div class="itcerts-item" data-aos="fade-right" data-aos-delay="300">
+        <img src="images/profile.jpg" alt="Lodi">
+        <form target="_blank" action="cv-lodipalle.pdf" class="download-cv">
+        <input type="submit" value="Download CV" />
+        </form>
       </div>
     </div>
   </section>
