--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
       <div class="itcerts-item" data-aos="fade-right" data-aos-delay="300">
         <img src="images/profile.jpg" alt="Lodi">
         <form target="_blank" action="cv-lodipalle.pdf" class="download-cv">
-        <input type="submit" value="Download CV" />
+        <input type="submit" value="Download CompTIA Sec+ Sys-601 Cert" />
         </form>
       </div>
     </div>
