added security plus image

--- a/index.html
+++ b/index.html
@@ -159,11 +159,13 @@
         <h1>IT Certifications</h1>
         <h6>IT certificates I Passed</h6>
       </div>
-      <div class="itcerts-item" data-aos="fade-right" data-aos-delay="300">
-        <img src="images/profile.jpg" alt="Lodi">
-        <form target="_blank" action="cv-lodipalle.pdf" class="download-cv">
-        <input type="submit" value="Download CompTIA Sec+ Sys-601 Cert" />
-        </form>
+      <div class="itcerts-item">
+        <div class="itcerts-img" data-aos="fade-right" data-aos-delay="300">
+          <img src="images/security-plus.jpg" alt="CompTIA Sec+ Sys-601">
+          <form target="_blank" action="security-plus.jpg" class="download-cv">
+          <input type="submit" value="CompTIA Sec+ Sys-601 Cert" />
+          </form>
+        </div>
       </div>
     </div>
   </section>
