corrected spelling Sy0-601

--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
         <div class="itcerts-img" data-aos="fade-right" data-aos-delay="300">
           <img src="images/security-plus.jpg" alt="CompTIA Sec+ Sys-601">
           <form target="_blank" action="security-plus.jpg" class="download-cv">
-          <input type="submit" value="CompTIA Sec+ Sys-601 Cert" />
+          <input type="submit" value="CompTIA Sec+ Sy0-601 Cert" />
           </form>
         </div>
       </div>
