added sec+ badge

--- a/index.html
+++ b/index.html
@@ -157,16 +157,9 @@
     <div class="container">
       <div class="section-heading">
         <h1>IT Certifications</h1>
-        <h6>IT certificates I Passed</h6>
-      </div>
-      <div class="itcerts-item">
-        <div class="itcerts-img" data-aos="fade-right" data-aos-delay="300">
-          <img src="images/security-plus.jpg" alt="CompTIA Sec+ Sys-601">
-          <form target="_blank" action="security-plus.jpg" class="download-cv">
-          <input type="submit" value="CompTIA Sec+ Sy0-601 Cert" />
-          </form>
-        </div>
-      </div>
+        <h6>IT certificates I Passed</h6><br>
+        <div data-iframe-width="150" data-iframe-height="270" data-share-badge-id="bcdbe0e1-cdb9-445f-82a2-8b4968804c47" data-share-badge-host="https://www.credly.com"></div>
+        <script type="text/javascript" async src="//cdn.credly.com/assets/utilities/embed.js"></script>
     </div>
   </section>
 
