--- a/index.html
+++ b/index.html
@@ -158,8 +158,12 @@
       <div class="section-heading">
         <h1>IT Certifications</h1>
         <h6>IT certificates I Passed</h6><br>
-        <div data-iframe-width="150" data-iframe-height="270" data-share-badge-id="bcdbe0e1-cdb9-445f-82a2-8b4968804c47" data-share-badge-host="https://www.credly.com"></div>
-        <script type="text/javascript" async src="//cdn.credly.com/assets/utilities/embed.js"></script>
+        <div class="my-certs">
+          <div class="certs" data-aos="fade-in" data-aos-delay="300">
+            <div data-iframe-width="250" data-iframe-height="370" data-share-badge-id="bcdbe0e1-cdb9-445f-82a2-8b4968804c47" data-share-badge-host="https://www.credly.com"></div>
+            <script type="text/javascript" async src="//cdn.credly.com/assets/utilities/embed.js"></script>
+          </div>
+        </div>
     </div>
   </section>
 
