--- a/index.html
+++ b/index.html
@@ -161,10 +161,8 @@
       </div>
       <div class="my-certs">
         <div class="certs" data-aos="fade-in" data-aos-delay="300">
-          <div data-iframe-width="250" data-iframe-height="370" data-share-badge-id="bcdbe0e1-cdb9-445f-82a2-8b4968804c47" data-share-badge-host="https://www.credly.com"></div>
-          <script type="text/javascript" async src="//cdn.credly.com/assets/utilities/embed.js"></script>
-        </div>
-        <div class="certs" data-aos="fade-in" data-aos-delay="300">
+          <h1>CompTIA Sec+ Sy0-601</h1>
+          <p>Obtained in January 17, 2023</p>
           <div data-iframe-width="250" data-iframe-height="370" data-share-badge-id="bcdbe0e1-cdb9-445f-82a2-8b4968804c47" data-share-badge-host="https://www.credly.com"></div>
           <script type="text/javascript" async src="//cdn.credly.com/assets/utilities/embed.js"></script>
         </div>
