--- a/index.html
+++ b/index.html
@@ -157,12 +157,12 @@
     <div class="container">
       <div class="section-heading">
         <h1>IT Certifications</h1>
-        <h6>IT certificates I Passed</h6><br>
+        <h6>IT certificates I Possess</h6><br>
       </div>
       <div class="my-certs">
         <div class="certs" data-aos="fade-in" data-aos-delay="300">
           <h1>CompTIA Sec+ Sy0-601</h1>
-          <div class="cert-container" data-iframe-width="260" data-iframe-height="380" data-share-badge-id="bcdbe0e1-cdb9-445f-82a2-8b4968804c47" data-share-badge-host="https://www.credly.com">
+          <div data-iframe-width="260" data-iframe-height="370" data-share-badge-id="bcdbe0e1-cdb9-445f-82a2-8b4968804c47" data-share-badge-host="https://www.credly.com">
           </div>
           <script type="text/javascript" async src="//cdn.credly.com/assets/utilities/embed.js"></script>
         </div>
