--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
     <div class="container">
       <div class="section-heading">
         <h1>IT Certifications</h1>
-        <h6>IT certificates I Possess</h6><br>
+        <h6>IT Certificates I Possess</h6><br>
       </div>
       <div class="my-certs">
         <div class="certs" data-aos="fade-in" data-aos-delay="300">
