--- a/index.html
+++ b/index.html
@@ -166,6 +166,11 @@
           </div>
           <script type="text/javascript" async src="//cdn.credly.com/assets/utilities/embed.js"></script>
         </div>
+        <div class="certs" data-aos="fade-in" data-aos-delay="400">
+          <h1>CompTIA CySA+ CS0-002</h1>
+          <div data-iframe-width="260" data-iframe-height="370" data-share-badge-id="6d376491-9169-4956-869d-19eb73ab03d1" data-share-badge-host="https://www.credly.com">
+          </div><script type="text/javascript" async src="//cdn.credly.com/assets/utilities/embed.js"></script>
+        </div>
       </div>
   </section>
 
