--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
           </div><script type="text/javascript" async src="//cdn.credly.com/assets/utilities/embed.js"></script>
         </div>
         <div class="certs" data-aos="fade-in" data-aos-delay="700">
-          <h1>CompTIA Security Analytics Professional - CSAP Stackable Certification</h1>
+          <h1>CSAP Stackable Certification</h1>
           <div data-iframe-width="260" data-iframe-height="370" data-share-badge-id="ae59bd1d-748e-41d8-9a98-2d7f144de9bc" data-share-badge-host="https://www.credly.com">
           </div><script type="text/javascript" async src="//cdn.credly.com/assets/utilities/embed.js"></script>
         </div>
