--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
           <h6>Myself</h6>
         </div>
         <p>
-          I am a junior software engineer transitioning to the
+          Lode Emmanuel Palle is a junior software engineer transitioning to the
           cybersecurity field. I discovered my passion for networking
           and security during my formative years completing my
           graduate diploma in software engineering. My goal is to
@@ -73,10 +73,12 @@
           within a team and in high-pressure work situations. As a
           former manager, I can manage a team efficiently and effectively. <br><br>
           <u>Qualification</u>: Graduate Diploma of Technology (Software Engineering) <br><br>
-          <u>Skills</u>: Ruby on Rails, Ruby, SQL, Javascript, HTML, CSS, Bootstrap,
+          <u>IT Skills</u>: ServiceNow Ticketing, Co-Pilot, SharePoint, Microsoft Active Directory, Customer
+          Service, End-User Support, Troubleshooting (firewalls, computer OS, hardware, network, MS Office
+          365 apps, Follow-You printers/scanners, Windows 10, MS Windows, server, and other products) <br><br>
+          <u>Software Development Skills</u>: Ruby on Rails, Ruby, SQL, Javascript, HTML, CSS, Bootstrap,
           React.js, node.js, Typescript, Android Studio, Flutter, Dart, Kotlin, ERP Systems,
           SAP, Tableau, Microsoft Power BI <br><br>
-          <u>Currently Learning</u>: C#, .NET, MongoDB, and RESTful API <br><br>
           <u>Other Skills</u>: Landscape photography, Facebook ads, Photoshop, Lightroom,
           GitHub, Figma, and Heroku
         </p>
