--- a/index.html
+++ b/index.html
@@ -65,14 +65,15 @@
         </div>
         <p>
           Lode Emmanuel Palle is a junior software engineer transitioning to the
-          cybersecurity field. I discovered my passion for networking
-          and security during my formative years completing my
+          cybersecurity field. I am top 5% in TryHackme. I discovered my passion
+          for networking and security during my formative years completing my
           graduate diploma in software engineering. My goal is to
           become a competent penetration tester in the future. <br><br>
           As a former healthcare professional, I am efficient in working
           within a team and in high-pressure work situations. As a
           former manager, I can manage a team efficiently and effectively. <br><br>
           <u>Qualification</u>: Graduate Diploma of Technology (Software Engineering) <br><br>
+          <u>Pen-testing</u>: Burp Suite, NMAP, Metasploit,John the Ripper, Nessus, Hydra <br><br>
           <u>IT Skills</u>: ServiceNow Ticketing, Co-Pilot, SharePoint, Microsoft Active Directory, Customer
           Service, End-User Support, Troubleshooting (firewalls, computer OS, hardware, network, MS Office
           365 apps, Follow-You printers/scanners, Windows 10, MS Windows, server, and other products) <br><br>
